# raccoon

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: python-package.yml  raccoon.yml
docs/: cli.md  example_pipeline.sh
examples/: combine_a.fasta  combine_b.fasta  combine_metadata.csv  constructed_alignment.fasta  constructed_reference.gb
examples/combine/: combine_report.html  combined.fasta  metadata.csv
examples/combine/inputs/: set_a.fasta  set_c.fasta
examples/mev/: mev_sample.fasta  mev_sample.tsv
examples/mev/aln-qc/: aln-qc_report.html  mask_sites.csv  mev_sample.aln.fasta
examples/mev/masked/: mask_report.html  mev_sample.aln.masked.fasta  mev_sample.aln.masked.fasta.bionj  mev_sample.aln.masked.fasta.iqtree  mev_sample.aln.masked.fasta.mldist  mev_sample.aln.masked.fasta.treefile  mev_sample.pruned.tree
examples/mini_tree/: mini.aln.fasta  mini.pruned.tree  mini.state  mini.treefile
raccoon/: __init__.py  command.py
raccoon/commands/: __init__.py  alignment.py  combine.py  mask.py  phylo.py
raccoon/templates/: aln_qc.html  base.html  mask.html  seq_qc.html  tree_qc.html
raccoon/utils/: alignment_functions.py  bot_baltic.py  constants.py  io.py  phylo_functions.py  plotly_baltic.py  plotting.py  reconstruction_functions.py  reporting.py
scripts/: gen_large_demo.py
tests/: test_alignment_command.py  test_alignment_qc.py  test_bot_baltic.py  test_cli.py  test_combine_command.py  test_end_to_end_alignment_qc.py  test_io.py  test_mask_command.py  test_plotting.py  test_reporting_templates.py
(+12 files in other folders)
