[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoon"
dynamic = ["version"]
description = "A Python package for curating virus genome alignments and phylogenies and flagging QC issues"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Aine OToole", email = "aine.otoole@ed.ac.uk"}
]
license = {text = "LICENSE"}
keywords = []
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "biopython>=1.79",
    "scipy",
    "matplotlib>=3.3.1",
    'baltic',
    'seaborn'
]

[project.urls]
Homepage = "https://github.com/aineniamh/raccoon"

[project.scripts]
raccoon = "raccoon.command:main"

[tool.setuptools]
packages = ["raccoon", "raccoon.commands", "raccoon.utils"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "raccoon.__version__"}

